--- a/style.css
+++ b/style.css
@@ -1,27 +1,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
 
 body {
-    background: url(video/smoky\ fog.mp4);
+    background-color: black;
+    color: white;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100vw;
 }
 
 .pfp {
-    width: 10vw;
-    margin: 5vh auto;
+    margin-top: 25px;
 }
 
 .pfp img {
-    width: 10vw;
+    width: 150px;
     border: 3px solid white;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+}
+
+.container {
+    width: 90%;
+    max-width: 680px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+p {
+    margin-top: -10px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+.tile {
+    width: 100%;
+    background-color: rgb(37,37,37);
+    margin: 5px;
+    border-radius: 17px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tile p {
+    margin: 0;
+}
+
+.tile:hover {
+    transition: cubic-bezier(.07, 1.41, .82, 1.41) 0.2s;
+    transform: scale(1.02);
+}
+
+.icon {
+    width: 40px;
+    margin-left: 10px;
+    margin-top: 8px;
+}
+
+.tile-share-button {
+    margin: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: rgb(52,52,52);
+}
+
+.tile-share-button svg {
+    width: 20px;
+    margin-left: 10px;
+    margin-top: 8px;
+}
+
+footer p {
+    margin-top: 10px;
 }
